--- a/projectOne.html
+++ b/projectOne.html
@@ -3,7 +3,9 @@
 <html>
     
 
-<head></head>
+<head>
+    <link rel="stylesheet" href = "styles.css" />
+</head>
 <body>
     <h1>Mans not hot</h1>
     <p>Hop out the 4 door with a .44. That's 1, 2 3, and 4. Waiting in the corridor. Your dad is 44. </p>
